# ESP32_Artbot

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  artbot_main.c  http_post.c  http_post.h  http_post_original.c  sd_card.c  sd_card.h  websocket.c  websocket.h  wifi_ap.c  wifi_ap.h
